# meme-blip

./: .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  LOGO_SETUP.md  README.md  SECURITY.md  SUPPORT.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
.github/workflows/: check.yml  release.yml
app/src/: App.jsx  main.jsx
app/src/components/: BoardCard.jsx  DeviceCard.jsx  MetricCard.jsx  PageHeader.jsx  SoundCard.jsx
app/src/data/: seedData.js
app/src/layouts/: AppShell.jsx
app/src/lib/: iconMap.js
app/src/pages/: AudioRouting.jsx  (+6 more)
assets/: robots.txt  site.webmanifest  sitemap.xml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  INDEX.md  MIC_ROUTING.md  MIXER_WORKFLOW.md  MYINSTANTS_SUPPLIER.md  RELEASE.md  TODO.md  VERCEL_DEPLOY.md  WORKING.md
docs/releases/: 1.4.1.md  v1.1.0.md
driver/: README.md
driver/scripts/: bootstrap-sysvad.ps1  build-driver.ps1  check-wdk.ps1  install-driver.ps1  install-prereqs.ps1  uninstall-driver.ps1
native/: Cargo.toml  README.md
native/src/: api.rs  audio.rs  driver.rs  hotkeys.rs  main.rs  models.rs  settings.rs  storage.rs  tray.rs  updater.rs
native/src/api/: auth.rs  error.rs
native/src/api/routes/: devices.rs  mod.rs  settings.rs  sounds.rs  system.rs
packaging/windows/: MemeBlip.iss
scripts/: package-windows.ps1  stop-api-port.ps1  stop-companion.ps1
site/: index.html  vite.config.js
site/src/: App.jsx  styles.css
virtual-cable/: check-vbcable.ps1  install-vbcable.ps1  open-all-system-audio-mode.ps1  open-system-audio-mode.ps1
(+17 files in other folders)
