[package]
name = "meme-blip-native"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
cpal = "0.15"
directories = "5"
global-hotkey = "0.5"
open = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.28"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tray-icon = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
